--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,106 @@
   padding: 0;
 }
 
+.banner {
+  background-color: coral;
+  text-align: center;
+  padding: 40px;
+}
+
+.banner-text {
+  padding: 20px;
+  color: white;
+}
+.search-input {
+  border: none;
+  box-shadow: 0px 5px 5px grey;
+  padding: 10px;
+  outline: none;
+  transition: 0.4s ease;
+
+  background-color: rgb(255, 255, 255, 0.9);
+}
+
+.search-input:focus {
+  background-color: rgb(255, 255, 255);
+}
+
+.section {
+  /* display: flex; */
+  /* justify-content: center; */
+  padding-top: 20px;
+  /* align-items: center; */
+  /* height: 60vh; */
+  background-color: magenta;
+}
+
+.city-header {
+  text-align: center;
+  border: 1px solid;
+  padding: 10px;
+}
+
 .cards-container {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   background-color: cyan;
+  gap: 1rem;
+  width: min(95%, 1280px);
+  margin: auto;
+  padding-top: 20px;
 }
 
+.card {
+  background-color: lightseagreen;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.background-info {
+  text-align: center;
+  background-color: blue;
+  border-radius: 5px 5px 5px 0px;
+}
+
+.background-infosunny {
+  background-color: yellow;
+}
+
+.background-inforain {
+  background-color: black;
+}
+
+.background-infocloud {
+  background-color: blue;
+}
+
+.background-info p {
+  color: white;
+  font-weight: bold;
+  padding-top: 20px;
+  font-size: 1.2rem;
+}
+
+.background-info img {
+  padding: 20px;
+  width: 70%;
+  object-fit: cover;
+}
+
+.additional-info {
+  background-color: lightsalmon;
+  border-radius: 5px;
+}
+
+.additional-headers,
+.additional-data {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  border-bottom: 1px solid #eee;
+  text-align: center;
+}
 @media (min-width: 600px) {
   .cards-container {
     grid-template-columns: repeat(2, 1fr);
@@ -24,6 +118,6 @@
 
 @media (min-width: 1200px) {
   .cards-container {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
 }
