--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   font-family: "Open Sans", sans-serif;
 }
 
+.main {
+  position: relative;
+}
 .banner {
   background-color: coral;
   background-image: url("https://wallpaperpure.net/wp-content/uploads/2018/07/77920a56b3e1d439ee9da74ba97799c7.png");
@@ -44,7 +47,7 @@
   /* justify-content: center; */
   padding-top: 20px;
   /* align-items: center; */
-  height: 79.6vh;
+  height: 72.9vh;
   background-image: url("https://wallpaperpure.net/wp-content/uploads/2018/07/77920a56b3e1d439ee9da74ba97799c7.png");
   background-position: center;
   /* background-size: cover; */
@@ -127,7 +130,7 @@
   grid-template-columns: repeat(1, 1fr);
   /* background-color: white; */
   border-radius: 10px;
-  padding: 10px;
+  padding-top: 10px;
   gap: 2rem;
   width: min(100%, 1280px);
   margin: auto;
@@ -298,4 +301,13 @@
   .cards-container {
     grid-template-columns: repeat(5, 1fr);
   }
+}
+
+.footer-copyright {
+  bottom: 1%;
+  width: 100%;
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  text-align: center;
 }
