--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-
+  padding-top: 50px;
   align-items: center;
 }
 
@@ -105,7 +105,7 @@
 }
 
 .middle-weatherdata img {
-  width: 40%;
+  width: 20%;
 }
 
 .middle-weatherdata {
@@ -227,7 +227,7 @@
 .background-inforain img,
 .background-infosunny img {
   margin-top: 20px;
-  width: 30%;
+  width: 20%;
   object-fit: cover;
 }
 .temp-description {
