--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@
   padding: 10px;
   background-color: white;
   box-shadow: 0px 5px 5px grey;
+  cursor: pointer;
 }
 
 .button-predefinedcity:hover {
